2014-04-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/munmap.c (__munmap): Return EINVAL if `addr' is 0.

2014-04-16  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Regenerate.

2014-04-16  Stefan Liebler  <stli@linux.vnet.ibm.com>

	[BZ #14770]
	* sysdeps/s390/configure.ac: Check for Binutils >= 2.24.
	* sysdeps/s390/configure: Regenerate.

2014-04-16  Stefan Liebler  <stli@linux.vnet.ibm.com>

	[BZ #16824]
	* sysdeps/ieee754/ldbl-128/e_j1l.c (__ieee754_y1l):
	Set round-to-nearest internally to reduce error accumulation.

2014-04-16  Alan Modra  <amodra@gmail.com>

	[BZ #16740]
	[BZ #16619]
	* sysdeps/ieee754/ldbl-128ibm/s_frexpl.c (__frexpl): Rewrite.
	* math/libm-test.inc (frexp_test_data): Add tests.
	* NEWS: Update fixed bug list.

2014-04-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile: Depend on libraries in build directory.
	(bench-math): Separate out math tests.
	(bench-pthread): Separate out pthread tests.
	(bench): Include math and pthread tests.

2014-04-14  Carlos O'Donell  <carlos@redhat.com>

	[BZ #16831]
	* csu/libc-start.c (LIBC_START_MAIN) [!SHARED]: Call
	_dl_debug_initialize.

2014-04-14  Carlos O'Donell  <carlos@redhat.com>

	* configure.ac: Remove SELinux header check.
	* configure: Regenerate.
	* nscd/selinux.c (perms): Array of const char* to permission names.
	(nscd_request_avc_has_perm): Call security_deny_unknown to find
	default policy. Call string_to_security_class and string_to_av_perm to
	translate strings. Enforce default policy and call avs_has_perm with
	results of translated strings.

2014-04-13  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2014-04-12  Allan McRae  <allan@archlinux.org>

	[BZ #16838]
	* manual/string.texi (Collation Functions): Fix qsort argument
	order in example.
	Reported by David C. Rankin <drankinatty@suddenlinkmail.com>.

2014-04-11  Chris Metcalf  <cmetcalf@tilera.com>
